# iot_interactive_kit

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: esp32s3_devkitc_esp32s3_procpu.overlay
desktop_app/: api.py  main.py
desktop_app/pages/: buzzer.py  led.py  motor.py  provision.py  relay.py  sensors.py  servo.py
include/: device_profile.h
include/modules/: analog_module.h  api_module.h  buzzer_module.h  config_module.h  device_identity.h  dht22_module.h  gpio_inputs_module.h  led_module.h  motor_module.h  mpu6050_module.h  provision_module.h  relay_module.h  reset_button_module.h  rgb_module.h  servo_module.h  vl6180x_module.h  wifi_manager.h
src/: main.c
src/modules/: analog_module.c  api_module.c  buzzer_module.c  config_module.c  device_identity.c  dht22_module.c  gpio_inputs_module.c  led_module.c  motor_module.c  mpu6050_module.c  provision_module.c  relay_module.c  reset_button_module.c  rgb_module.c  servo_module.c  vl6180x_module.c  wifi_manager.c
